--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -21,4 +21,5 @@ jobs:
           SHOPIFY_CLI_PARTNERS_TOKEN: ${{ secrets.SHOPIFY_CLI_PARTNERS_TOKEN }}
           # .env content after a deploy
           SHOPIFY_API_KEY: 3dab3303f5789587b2f870f9149d904c
-        run: npm run deploy -- -f
+          COMMIT_URL: ${{ github.server_url }}/${{ github.respository }}/commit/${{ github.sha }}
+        run: npm run deploy -- -f --source-control-url $COMMIT_URL
