--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -22,4 +22,4 @@ jobs:
           # .env content after a deploy
           SHOPIFY_API_KEY: 3dab3303f5789587b2f870f9149d904c
           COMMIT_URL: ${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}
-        run: npm run deploy -- -f --source-control-url \"$COMMIT_URL\"
+        run: npm run deploy -- -f --source-control-url "$COMMIT_URL"
